--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
             </section>
         </section>
         <section class="header-con">
-
+            <p class="tag-line tagContent">Top Class Property Technology</p>
+            <h1 class="tag-line">Drive More Sales
+                with Shwart Haus</h1>
         </section>
     </section>
     <!-- header -->
