--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
 
 <body>
     <!-- nav -->
-    <nav>
+    <nav id="navbar">
         <img src="./img/logo.png" alt="">
         <ul class="navLink not-active">
             <li class="links">Buy</li>
             <li class="links">Rent</li>
             <li class="links">Sell</li>
             <li class="links">New Homes</li>
-            <li class="links">Commercial</li>
+            <a href="./commercial.html"><li class="links">Commercial</li></a>
             <li class="links">New Developement</li>
             <li class="links">Resources</li>
             <section class="user">
@@ -99,7 +99,7 @@
                 <h3>Price: <span class="Price">$12,000,000</span></h3>
             </section>
             <section class="project">
-                <img src="/img/house/image5.png" alt="">
+                <img src="./img/house/image6.png" alt="">
                 <h3>Property type: <span class="type">house</span></h3>
                 <h3>Bedrooms: <span class="BedroomsNo.">5</span></h3>
                 <h3>Price: <span class="Price">$12,000,000</span></h3>
@@ -155,12 +155,13 @@
         <section class="newsLetter">
             <h1 class="footer-title">Location</h1>
             <p>1235 E. Rodriguez Ave. New Manila, Quezon City</p>
-            <p>+63 917 700 6497</p>
+            <p>+63 916 789 8882</p>
             <p>SchwartHaus@gmail.com</p>
            
         </section>
     </footer>
     <script src="./script.js"></script>
+    <script src="nav.js"></script>
 </body>
 
 </html>
