--- a/commercial.html
+++ b/commercial.html
@@ -4,9 +4,87 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.3/css/jquery.dataTables.css">
+    <link rel="stylesheet" href="./css/nav.css">
+    <link rel="stylesheet" href="./css/commercial/searchProperty.css">
+    <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@200;300;400&display=swap" rel="stylesheet">
     <title>Schwart Haus Commercial</title>
 </head>
 <body>
-    
+    <!-- subtitute for reusable component temporary -->
+    <nav id="navbar">
+        <a href="index.html"><img src="./img/logo.png" alt=""></a>
+        <ul class="navLink not-active">
+            <li class="links">Buy</li>
+            <li class="links">Rent</li>
+            <li class="links">Sell</li>
+            <li class="links">New Homes</li>
+            <a href="./commercial.html"><li class="links">Commercial</li></a>
+            <li class="links">New Developement</li>
+            <li class="links">Resources</li>
+            <section class="user">
+                <button class="btn-user">LOG IN</button>
+                <button class="btn-user">SIGN UP</button>
+            </section>
+        </ul>
+        <section class="menu menuHide">
+            <section class="burger"></section>
+            <section class="burger"></section>
+            <section class="burger"></section>
+        </section>
+    </nav>
+   <!-- subtitute for reusable component temporary -->
+   <section class="searchPropertyCon">
+        <section class="searchbox">
+            <form class="searchForm" action="">
+                <input class="input" type="text" placeholder="Search by location, project">
+                <select name="" id="">
+                    <option value="">Buy</option>
+                    <option value="">Rent</option>
+                    <option value="">Newhome</option>
+                </select>
+                <select name="" id="">
+                    <option value="">Condo</option>
+                    <option value="">Apartment</option>
+                    <option value="">House</option>
+                </select>
+                <select name="" id="">
+                    <option value="">Any price</option>
+                    <option value="">Min</option>
+                    <option value="">Max</option>
+                </select>
+                <select name="" id="">
+                    <option value="">0 bed</option>
+                    <option value="">1 bed</option>
+                    <option value="">5 bed</option>
+                </select>
+                <button class="searchBtn" type="submit">Search</button>
+            </form>
+       
+        </section>
+        <section class="searchbox-content">
+            <h1>Commercial properties for Sale in the Philippines</h1>
+            <section class="search-result">
+                <section class="search-list">
+                    <section class="project-list">1</section>
+                    <section class="project-list">2</section>
+                    <section class="project-list">3</section>
+                    <section class="project-list">4</section>
+                    <section class="project-list">5</section>
+                    <section class="project-list">6</section>
+                </section>
+                <div class="pagination">
+                    <a class="active" href="#">&laquo;</a>
+                    <a href="#">1</a>
+                    <a href="#">2</a>
+                    <a href="#">3</a>
+                    <a href="#">&raquo;</a>
+                  </div>
+            </section>
+        </section>
+   </section>
+
+
+    <script src="./script.js"></script>
 </body>
 </html>
