--- a/commercial.html
+++ b/commercial.html
@@ -37,7 +37,7 @@
    <section class="searchPropertyCon">
         <section class="searchbox">
             <form class="searchForm" action="">
-                <input class="input" type="text" placeholder="Search by location, project">
+                <input id="search" class="input" type="text" placeholder="Search by location, project">
                 <select name="" id="">
                     <option value="">Buy</option>
                     <option value="">Rent</option>
@@ -66,16 +66,46 @@
             <h1>Commercial properties for Sale in the Philippines</h1>
             <section class="search-result">
                 <section class="search-list">
-                    <section class="project-list">1</section>
-                    <section class="project-list">2</section>
-                    <section class="project-list">3</section>
-                    <section class="project-list">4</section>
-                    <section class="project-list">5</section>
-                    <section class="project-list">6</section>
+                    <section class="project-list">
+                        <img src="./img/house/image1.png" alt="">
+                        <h3>Property type: <span class="type">house</span></h3>
+                        <h3>Bedrooms: <span class="BedroomsNo.">5</span></h3>
+                        <h3>Price: <span class="Price">$12,000,000</span></h3>
+                    </section>
+                    <section class="project-list">
+                        <img src="./img/house/image1.png" alt="">
+                        <h3>Property type: <span class="type">house</span></h3>
+                        <h3>Bedrooms: <span class="BedroomsNo.">5</span></h3>
+                        <h3>Price: <span class="Price">$12,000,000</span></h3>
+                    </section>
+                    <section class="project-list">
+                        <img src="./img/house/image1.png" alt="">
+                        <h3>Property type: <span class="type">house</span></h3>
+                        <h3>Bedrooms: <span class="BedroomsNo.">5</span></h3>
+                        <h3>Price: <span class="Price">$12,000,000</span></h3>
+                    </section>
+                    <section class="project-list">
+                        <img src="./img/house/image1.png" alt="">
+                        <h3>Property type: <span class="type">house</span></h3>
+                        <h3>Bedrooms: <span class="BedroomsNo.">5</span></h3>
+                        <h3>Price: <span class="Price">$12,000,000</span></h3>
+                    </section>
+                    <section class="project-list">
+                        <img src="./img/house/image1.png" alt="">
+                        <h3>Property type: <span class="type">house</span></h3>
+                        <h3>Bedrooms: <span class="BedroomsNo.">5</span></h3>
+                        <h3>Price: <span class="Price">$12,000,000</span></h3>
+                    </section>
+                    <section class="project-list">
+                        <img src="./img/house/image1.png" alt="">
+                        <h3>Property type: <span class="type">house</span></h3>
+                        <h3>Bedrooms: <span class="BedroomsNo.">5</span></h3>
+                        <h3>Price: <span class="Price">$12,000,000</span></h3>
+                    </section>
                 </section>
                 <div class="pagination">
-                    <a class="active" href="#">&laquo;</a>
-                    <a href="#">1</a>
+                    <a  href="#">&laquo;</a>
+                    <a class="active" href="#">1</a>
                     <a href="#">2</a>
                     <a href="#">3</a>
                     <a href="#">&raquo;</a>
