--- a/commercial.html
+++ b/commercial.html
@@ -67,39 +67,39 @@
             <section class="search-result">
                 <section class="search-list">
                     <section class="project-list">
-                        <img src="./img/house/image1.png" alt="">
+                        <img class="imgpr" src="./img/house/image1.png" alt="">
                         <h3>Property type: <span class="type">house</span></h3>
-                        <h3>Bedrooms: <span class="BedroomsNo.">5</span></h3>
+                        <h3>Bedrooms: <span class="BedroomsNo">5</span></h3>
                         <h3>Price: <span class="Price">$12,000,000</span></h3>
                     </section>
                     <section class="project-list">
-                        <img src="./img/house/image1.png" alt="">
+                        <img class="imgpr" src="./img/house/image1.png" alt="">
                         <h3>Property type: <span class="type">house</span></h3>
-                        <h3>Bedrooms: <span class="BedroomsNo.">5</span></h3>
+                        <h3>Bedrooms: <span class="BedroomsNo">5</span></h3>
                         <h3>Price: <span class="Price">$12,000,000</span></h3>
                     </section>
                     <section class="project-list">
-                        <img src="./img/house/image1.png" alt="">
+                        <img class="imgpr" src="./img/house/image1.png" alt="">
                         <h3>Property type: <span class="type">house</span></h3>
-                        <h3>Bedrooms: <span class="BedroomsNo.">5</span></h3>
+                        <h3>Bedrooms: <span class="BedroomsNo">5</span></h3>
                         <h3>Price: <span class="Price">$12,000,000</span></h3>
                     </section>
                     <section class="project-list">
-                        <img src="./img/house/image1.png" alt="">
+                        <img class="imgpr" src="./img/house/image1.png" alt="">
                         <h3>Property type: <span class="type">house</span></h3>
-                        <h3>Bedrooms: <span class="BedroomsNo.">5</span></h3>
+                        <h3>Bedrooms: <span class="BedroomsNo">5</span></h3>
                         <h3>Price: <span class="Price">$12,000,000</span></h3>
                     </section>
                     <section class="project-list">
-                        <img src="./img/house/image1.png" alt="">
+                        <img class="imgpr" src="./img/house/image1.png" alt="">
                         <h3>Property type: <span class="type">house</span></h3>
-                        <h3>Bedrooms: <span class="BedroomsNo.">5</span></h3>
+                        <h3>Bedrooms: <span class="BedroomsNo">5</span></h3>
                         <h3>Price: <span class="Price">$12,000,000</span></h3>
                     </section>
                     <section class="project-list">
-                        <img src="./img/house/image1.png" alt="">
+                        <img class="imgpr" src="./img/house/image1.png" alt="">
                         <h3>Property type: <span class="type">house</span></h3>
-                        <h3>Bedrooms: <span class="BedroomsNo.">5</span></h3>
+                        <h3>Bedrooms: <span class="BedroomsNo">5</span></h3>
                         <h3>Price: <span class="Price">$12,000,000</span></h3>
                     </section>
                 </section>
@@ -116,5 +116,6 @@
 
 
     <script src="./script.js"></script>
+    <script src="./commercial.js"></script>
 </body>
 </html>
