--- a/commercial.html
+++ b/commercial.html
@@ -38,25 +38,25 @@
         <section class="searchbox">
             <form class="searchForm" action="">
                 <input id="search" class="input" type="text" placeholder="Search by location, project">
-                <select name="" id="">
+                <select name="s1" id="s1">
                     <option value="">Buy</option>
-                    <option value="">Rent</option>
-                    <option value="">Newhome</option>
+                    <option value="rent">Rent</option>
+                    <option value="new">New</option>
                 </select>
-                <select name="" id="">
+                <select name="s2" id="s2">
                     <option value="">Condo</option>
-                    <option value="">Apartment</option>
-                    <option value="">House</option>
+                    <option value="apartment">Apartment</option>
+                    <option value="house">House</option>
                 </select>
-                <select name="" id="">
+                <select name="s3" id="s3">
                     <option value="">Any price</option>
-                    <option value="">Min</option>
-                    <option value="">Max</option>
+                    <option value="asc">Min</option>
+                    <option value="desc">Max</option>
                 </select>
-                <select name="" id="">
+                <select name="s4" id="s4">
                     <option value="">0 bed</option>
-                    <option value="">1 bed</option>
-                    <option value="">5 bed</option>
+                    <option value="1">1 bed</option>
+                    <option value="5">5 bed</option>
                 </select>
                 <button class="searchBtn" type="submit">Search</button>
             </form>
@@ -65,44 +65,7 @@
         <section class="searchbox-content">
             <h1>Commercial properties for Sale in the Philippines</h1>
             <section class="search-result">
-                <section class="search-list">
-                    <section class="project-list">
-                        <img class="imgpr" src="./img/house/image1.png" alt="">
-                        <h3>Property type: <span class="type">house</span></h3>
-                        <h3>Bedrooms: <span class="BedroomsNo">5</span></h3>
-                        <h3>Price: <span class="Price">$12,000,000</span></h3>
-                    </section>
-                    <section class="project-list">
-                        <img class="imgpr" src="./img/house/image1.png" alt="">
-                        <h3>Property type: <span class="type">house</span></h3>
-                        <h3>Bedrooms: <span class="BedroomsNo">5</span></h3>
-                        <h3>Price: <span class="Price">$12,000,000</span></h3>
-                    </section>
-                    <section class="project-list">
-                        <img class="imgpr" src="./img/house/image1.png" alt="">
-                        <h3>Property type: <span class="type">house</span></h3>
-                        <h3>Bedrooms: <span class="BedroomsNo">5</span></h3>
-                        <h3>Price: <span class="Price">$12,000,000</span></h3>
-                    </section>
-                    <section class="project-list">
-                        <img class="imgpr" src="./img/house/image1.png" alt="">
-                        <h3>Property type: <span class="type">house</span></h3>
-                        <h3>Bedrooms: <span class="BedroomsNo">5</span></h3>
-                        <h3>Price: <span class="Price">$12,000,000</span></h3>
-                    </section>
-                    <section class="project-list">
-                        <img class="imgpr" src="./img/house/image1.png" alt="">
-                        <h3>Property type: <span class="type">house</span></h3>
-                        <h3>Bedrooms: <span class="BedroomsNo">5</span></h3>
-                        <h3>Price: <span class="Price">$12,000,000</span></h3>
-                    </section>
-                    <section class="project-list">
-                        <img class="imgpr" src="./img/house/image1.png" alt="">
-                        <h3>Property type: <span class="type">house</span></h3>
-                        <h3>Bedrooms: <span class="BedroomsNo">5</span></h3>
-                        <h3>Price: <span class="Price">$12,000,000</span></h3>
-                    </section>
-                </section>
+                <section class="search-list"></section>
                 <div class="pagination">
                     <a  href="#">&laquo;</a>
                     <a class="active" href="#">1</a>
